--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class=".debugArea"></div>
+    <div class="debugArea"></div>
     <form id="todoform">
         <div class="header">
             <h2>3 Monate vor dem Umzug</h2>
