--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div class="debugArea"></div> <button id="debug" style="display:none;">Show me the model state!</button>
    
         <div class="header">
-            <h2 class="h2-title">3 Monate vor dem Umzug</h2>
+            <h2 class="h2-title"></h2>
             <input type="text" id="todo" placeholder="Individualisiere deine Liste...">
             <span class="addBtn" id="addBtn">Add</span>
         </div>
