--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="utf-8" />
     <title> W2CH umzug planner</title>
-<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <script src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
     <section id="todosection">
-    <div class="debugArea"></div> <button id="debug" style="display:none;">Show me the model state!</button>
-   
+        <div class="debugArea"></div> <button id="debug" style="display:none;">Show me the model state!</button>
+        <h2 class="h2-title"></h2>
+        <div>
+            <ul id="todolist"></ul>
+        </div>
         <div class="header">
-            <h2 class="h2-title"></h2>
             <input type="text" id="todo" placeholder="Individualisiere deine Liste...">
             <span class="addBtn" id="addBtn">Add</span>
         </div>
-    </form>
-    <ul id="todolist"></ul>
-</section>
+    </section>
 
 </body>
 
