--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <title> W2CH umzug planner</title>
@@ -8,18 +7,15 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-
 <body>
-       
-        <section id="todosection"> <h2 class="h2-title header"></h2>
+    <section id="todosection">
+        <h2 class="h2-title header"></h2>
         <div class="debugArea"></div> <button id="debug" style="display:none;">Show me the model state!</button>
-        <ul id="todolist"></ul>
-        <div class="header">
+        <ul id="todolist" class="content"></ul>
+        <div class="footer">
             <input type="text" id="todo" placeholder="Individualisiere deine Liste...">
             <span class="addBtn" id="addBtn">Add</span>
         </div>
     </section>
-
 </body>
-
 </html>
