--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
     <section id="todosection">
         <h2 class="h2-title header"></h2>
         <div class="debugArea"></div> <button id="debug" style="display:none;">Show me the model state!</button>
-        <ul id="todolist" class="content"></ul>
+        <div class="spacer"></div>
+        <div class="content">
+            <ul id="todolist" ></ul>
+        </div>
         <div class="footer">
             <input type="text" id="todo" placeholder="Individualisiere deine Liste...">
             <span class="addBtn" id="addBtn">Add</span>
