commented default li state

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <div class="spacer"></div>
         <div class="content">
             <ul id="todolist">
-                <li data-state="default" data-id="01e0ba3c-0693-4017-9401-3ab6f017ad1e" class="">
+                <!-- <li data-state="default" data-id="01e0ba3c-0693-4017-9401-3ab6f017ad1e" class="">
                     <label class="checkbox-container ">
                         <input type="checkbox" class="">
                         <span class="todo-item-title">Mietvertrag der neuen Wohnung unterzeichnen</span><span class="checkmark"></span>
@@ -232,7 +232,7 @@
                         <span class="todo-item-title">LAtest latest latest latest </span><span class="checkmark"></span>
                     </label>
                     <span class="close">×</span>
-                </li>
+                </li> -->
 
             </ul>
         </div>
