moved element into children container

--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
         <h2 class="h2-title header"></h2>
         <div class="debugArea"></div> <button id="debug" style="display:none;">Show me the model state!</button>
         <div class="spacer"></div>
-        <div class="content page-loader">
+        <div class="content">
             <ul id="todolist">
-              
+              <div class="page-loader">
                 <svg>
                     <circle cx="75" cy="75" r="20"></circle>
                     <circle cx="75" cy="75" r="35"></circle>
                     <circle cx="75" cy="75" r="50"></circle>
                     <circle cx="75" cy="75" r="65"></circle>
                   </svg>
-               
+                </div>
             </ul>
         </div>
         <div class="footer">
