Renamed input text

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="footer">
-            <input type="text" id="todo" placeholder="Individualisiere deine Liste...">
+            <input type="text" id="todo" placeholder="Eigene Aufgabe hinzufügen...">
             <span class="addBtn" id="addBtn">Add</span>
         </div>
     </section>
