--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="todoModalCenterTitle">Please confirm</h5>
+                        <h5 class="modal-title" id="todoModalCenterTitle"></h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -29,8 +29,8 @@
                         Are you sure you want to delete item?
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                        <button type="button" id="confirm" class="btn btn-primary">Yes</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Nein</button>
+                        <button type="button" id="confirm" class="btn btn-primary" style="background-color: #6c0">Ja</button>
                     </div>
                 </div>
             </div>
