--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Nein</button>
-                        <button type="button" id="confirm" class="btn btn-primary" style="background-color: #6c0">Ja</button>
+                        <button type="button" id="confirm" class="btn btn-primary" >Ja</button>
                     </div>
                 </div>
             </div>
