--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="footer">
             <input type="text" id="todo" placeholder="Eigene Aufgabe hinzufügen...">
-            <span class="addBtn" id="addBtn">Add</span>
+            <span class="addBtn" id="addBtn">Hinzufügen</span>
         </div>
     </section>
 </body>
