--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Nein</button>
-                        <button type="button" id="confirm" class="btn btn-primary" >Ja</button>
+                        <button type="button" id="confirm" class="btn btn-primary">Ja</button>
                     </div>
                 </div>
             </div>
@@ -43,12 +43,10 @@
         <div class="content">
             <ul id="todolist">
                 <div class="page-loader">
-                    <svg>
-                        <circle cx="75" cy="75" r="20"></circle>
-                        <circle cx="75" cy="75" r="35"></circle>
-                        <circle cx="75" cy="75" r="50"></circle>
-                        <circle cx="75" cy="75" r="65"></circle>
-                    </svg>
+                    <div class="loader-container">
+                        <div id="loader">Loading</div>
+                        <div id="asset"><img class="img-loader" src="assets/loader.png"  class="img-responsive"></div>
+                    </div>
                 </div>
             </ul>
         </div>
