I want to see how many open tasks I have

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,14 @@
             </div>
         </div>
 
-        <h2 class="h2-title header"></h2>
+        <h2 class="h2-title header">
+            <div id="table">
+                <div class="tr">
+                <div class="td checklist-title"> </div>
+                <div class="td checklist-counter">  </div>
+              </div>
+            </div>
+        </h2>
         <div class="debugArea"></div> <button id="debug" style="display:none;">Show me the model state!</button>
         <div class="spacer"></div>
         <div class="content">
