--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,9 @@
               </div>
             </div>
         </h2>
-        <div class="debugArea"></div> <button id="debug" style="display:none;">Show me the model state!</button>
+      
         <div class="spacer"></div>
+        <div class="debugArea"></div> <button id="debug" style="display:block;">Show me the model state!</button>
         <div class="content">
             <ul id="todolist">
                 <div class="page-loader">
