--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
         </h2>
       
         <div class="spacer"></div>
-        <div class="debugArea"></div> <button id="debug" style="display:block;">Show me the model state!</button>
+        <div class="debugArea"></div> <button id="debug" style="display:none;">Show me the model state!</button>
         <div class="content">
             <ul id="todolist">
                 <div class="page-loader">
