Change Naming of "Add Button" from "ADD" to "OK".

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="footer">
             <input type="text" id="todo" placeholder="Eigene Aufgabe hinzufügen...">
-            <span class="addBtn" id="addBtn">Add</span>
+            <span class="addBtn" id="addBtn">OK</span>
         </div>
     </section>
 </body>
